--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <h1>Serious Inquiries Only</h1>
-    <p>Contact: <a href="mailto:support@cag.com">support@cag.com</a></p>
+    <p>Contact: <a href="mailto:support@cag.com">support@CAG.com</a></p>
 
 </body>
 </html>
