--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Tier Coding Solutions</title>
+    <title>CAG.COM</title>
     <style>
         body {
             font-family: 'Roboto Mono', monospace; /* Modern monospace font */
